--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port=4500",
+    "start": "ng serve --proxy-config proxy.conf.json  --port=4500",
     "start:dev": "ng serve --port=4500 --env=dev",
     "start:mockServer": "node mock-server/host-mock-server.js",
     "build": "ng build",
