--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "@types/googlemaps": "^3.43.3",
     "bootstrap": "^5.2.0",
     "mockserver": "^3.1.1",
     "rxjs": "~7.5.0",
